--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <div id="menu">
     
     <div id="menu-container">
-      <a class="menu-tabs" href="https://moxfield.com/users/DylanToWin"> <img id="dylans-deck" src="images/icons/dylans-deck.png" alt=""></a>  
-      <a class="menu-tabs" href="https://moxfield.com/users/camjam"><img id="cams-deck" src="images/icons/cams-deck.png" alt=""></a>
+      <a  href="https://moxfield.com/users/DylanToWin"> <img class="menu-tabs" id="dylans-deck" src="images/icons/dylans-deck.png" alt=""></a>  
+      <a  href="https://moxfield.com/users/camjam"><img class="menu-tabs" id="cams-deck" src="images/icons/cams-deck.png" alt=""></a>
       <a href="https://www.playtowinmtg.com/merch"><img class="menu-tabs" src="images/icons/merch.png" alt=""></a>
       <a href="https://www.mythicgaming.com/playtowin"><img class="menu-tabs" src="images/icons/altersleeves.png" alt=""></a>
       <a href="https://www.dragonshield.com/?ref=playtowin"><img class="menu-tabs" src="images/icons/dragonshield.png" alt=""></a>
